fixed alignment of home.js and added styles

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -5,13 +5,16 @@
 }
 .home_container{
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.home_container_left{
-    flex: .7;
+.home_container_bottom{
+    margin: 1rem 0rem;
+    /* width: 40%; */
 }
-.home_container_right{
-    flex: .3;
+.home_container_top{
     box-shadow: 2px 10px 10px rgba(236, 109, 109, 0.4);
+    width: 40%;
 }
 .home_form_container{
     display: flex;
@@ -21,9 +24,15 @@
     border-radius: 3px;
     align-items: center;
 }
+.home_form_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
 .form_input{
     padding: 7px 5px;
-    margin: 1rem 0rem;
+    margin: 1rem 1rem;
     width: 100%;
     border-radius: 8px;
 }
@@ -43,5 +52,15 @@
     width: 100%;
     border-radius: 20px;
     font-size: large;
+    cursor: pointer;
+}
+.form_add_more{
+    padding: 10px;
+    border: none;
+    color: white;
+    background-color: blueviolet;
+    font-weight: 700;
+    width: 200px;
+    border-radius: 20px;
     cursor: pointer;
 }
